# pedidolocal

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  DOCS.html  PRESENTATION.md  README.md  alembic.ini  docker-compose.yml
app/: cli.py
app/api/routes/: catalog.py  health.py  orders.py
app/core/: config.py
app/models/: __init__.py
app/schemas/: auth.py  catalog.py  users.py  validation.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: audit.py  auth.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: audit.py  auth.py  orders.py
backend/app/services/: audit.py  auth.py  catalog.py  orders.py
backend/tests/: test_auth.py  test_cors.py  test_validation.py
frontend/: DOCUMENTATION.md  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/lib/: main.dart
frontend/lib/core/: constants.dart  formatters.dart  routes.dart  theme.dart  token_storage.dart
frontend/lib/models/: cart_item.dart  category.dart  order.dart  product.dart  token.dart  user.dart
frontend/test/: admin_screen_test.dart  api_client_test.dart  auth_provider_test.dart  cart_provider_test.dart  customer_screen_test.dart  model_test.dart  repository_test.dart  test_data.dart  widget_test.dart
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_catalog.py  test_orders.py
(+28 files in other folders)
